Adapt test infrastructure to the latest changes
^KT-43677 In Progress